# galton

./: .gitignore  pyproject.toml
notebooks/: README.md  candlestick_eda.ipynb  data_migration.ipynb  duckdb_reads.ipynb  init_local_data.ipynb  kalshi_api.ipynb  test_data_collection_scripts.ipynb  test_staging_data.ipynb
notes/: 2025-09-14.md
scripts/: get_accuweather_data.py  get_nws_observations.py  get_openmeteo_data.py  init_local_data.py
src/adapters/brokers/kalshi/: account.py  market_data.py
src/galton/adapters/brokers/kalshi/: base.py  execution.py  market_data.py
src/galton/data_collection/: accuweather.py  city_reference.py  current_data.py  file_search.py  nws_observations.py  openmeteo.py  partition_configs.py  utilities.py
src/galton/feature_engineering/: dates.py  forecasts.py
src/galton/ports/: market_ports.py
