[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galton"
version = "0.1.0"
description = "Forecasting and Open-Meteo data collection utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "requests",
    "pyarrow",
    "lxml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]